added cursor, fixed variables import on global sass

--- a/packages/frontend/styles/globals.scss
+++ b/packages/frontend/styles/globals.scss
@@ -1,8 +1,11 @@
 // Used for overriding defaults
 
-@import "styles/variables";
+@import "variables";
 
 * {
   font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica",
     "Arial", sans-serif;
+}
+html{
+  cursor: url('../public/asacoco.cur'), default;
 }
