--- a/packages/frontend/styles/SoundBoard.module.scss
+++ b/packages/frontend/styles/SoundBoard.module.scss
@@ -1,23 +1,58 @@
+.container {
+  background: #2C2C2C;
+  padding: 2em 2.5em;
+  margin: 0 2em;
+  border-radius: 1.5em;
+  font-size: 1.7rem;
+  color:white;
+
+  h2 {
+    margin-top: 0;
+    margin-bottom: 1em;;
+  }
+}
+
 .grid {
-  width:100%;
   display: grid;
-  grid-template-columns: repeat( auto-fit, minmax(150px, 1fr) );
-  grid-gap: 10px;
+  grid-template-columns: repeat( auto-fit, minmax(12em, 1fr) );
+  grid-gap: 1.5em 1.2em;
 }
 
 .card {
-  padding: 1rem;
-  aspect-ratio: 1.2;
-  border: 1px solid #eaeaea;
+  background: #FE7D3E;
+  aspect-ratio: 5;
   border-radius: 10px;
+  overflow: hidden;
   display: grid;
-  grid-template-rows: auto 20px;
+  grid-template-columns: 2em auto 2em;
+  grid-template-rows: calc(100% - 8px) 8px;
+  align-content: center;
+
+  .title {
+    grid-column: 2 / 4;
+    padding: 0.5em;
+
+    display: grid;
+    align-content: center;
+  }
+
+  .playButton {
+    display: grid;
+    align-items: center;
+    align-content: center;
+    padding-left: 0.5em;
+
+    img {
+      width: 1em;
+    }
+  }
+
+  .buttomLine {
+    background: white;
+    border-radius: 0 5px 5px 0;
+    height: 10px;
+    grid-column: 1 / 3;
+    grid-row: 2;
+  }
 }
 
-.title {
-
-}
-
-.playButton {
-  text-align: center;
-}
