Transforms Particle in a single component
- Moves the code for the Particles to a single component (Also moving its SCSS)
- Modifies _app to always render the SakuraParticles component
- Deletes sakura-tree image used for testing, waiting for another one with permission

--- a/packages/frontend/styles/SakuraParticles.module.scss
+++ b/packages/frontend/styles/SakuraParticles.module.scss
@@ -1,7 +1,5 @@
-@import "../styles/variables";
-
 .particles {
-	z-index: -1;
+	z-index: 0;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -10,6 +8,6 @@
 	pointer-events: none !important;
 
 	canvas {
-		pointer-events: inherit;
+		pointer-events: none !important;
 	}
 }
