--- a/packages/frontend/styles/Navigation.module.scss
+++ b/packages/frontend/styles/Navigation.module.scss
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@1,300&display=swap');
 
 .navigation {
+    /* TO-DO: Get permission or something for a background of sakura trees
     background-image: url('../public/navigation/sakura-trees.jpg');
     background-position: bottom center;
     background-repeat: no-repeat;
     background-size: cover;
+    */
 
     color: #FFFFFF;
     width: 100%;
