fix wrong hex code colors

--- a/packages/frontend/styles/variables.scss
+++ b/packages/frontend/styles/variables.scss
@@ -1,5 +1,5 @@
 // This file is used for color variables and scss mixins
 
-$orange: #ff732d;
-$dark-orange: #db5715;
+$orange: #fe7d3e;
+$dark-orange: #d36129;
 $white: #ffffff;
