--- a/packages/frontend/styles/SoundBoard.module.scss
+++ b/packages/frontend/styles/SoundBoard.module.scss
@@ -24,16 +24,14 @@
   border-radius: 10px;
   overflow: hidden;
   display: grid;
-  grid-template-columns: 2em auto 2em;
+  grid-template-columns: 2em auto;
   grid-template-rows: calc(100% - 8px) 8px;
   align-content: center;
 
   .title {
-    grid-column: 2 / 4;
-    padding: 0.5em;
-
     display: grid;
     align-content: center;
+    padding: 0.5em;
   }
 
   .playButton {
@@ -47,10 +45,11 @@
     }
   }
 
-  .buttomLine {
+  .progressBar {
     background: white;
-    border-radius: 0 5px 5px 0;
+    border-radius: 5px;
     height: 10px;
+    width: 0;
     grid-column: 1 / 3;
     grid-row: 2;
   }
