--- a/packages/frontend/styles/SoundBoard.module.scss
+++ b/packages/frontend/styles/SoundBoard.module.scss
@@ -1,10 +1,12 @@
+@import '../styles/variables';
+
 .container {
   background: #2c2c2c;
   padding: 2em 2.5em;
-  margin: 1em 2em;
+  margin: 2em;
   border-radius: 1.5em;
   font-size: 1.7rem;
-  color: white;
+  color: $white;
 
   h2 {
     margin-top: 0;
@@ -19,7 +21,7 @@
 }
 
 .card {
-  background: #fe7d3e;
+  background: $orange;
   aspect-ratio: 5;
   border-radius: 10px;
   overflow: hidden;
@@ -46,11 +48,15 @@
   }
 
   .progressBar {
-    background: white;
+    background: $white;
     border-radius: 5px;
     height: 10px;
     width: 0;
     grid-column: 1 / 3;
     grid-row: 2;
   }
+}
+
+.card:hover {
+  background: $dark-orange;
 }
