--- a/packages/frontend/styles/globals.scss
+++ b/packages/frontend/styles/globals.scss
@@ -1,14 +1,13 @@
 // Used for overriding defaults
 
-@import 'variables';
+@import "variables";
 
 * {
-  font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica',
-    'Arial', sans-serif;
+  font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica",
+    "Arial", sans-serif;
 }
-html {
+html{
   cursor: url('../public/asacoco.cur'), default;
-  background: #202020;
 }
 body {
   margin: 0;
