--- a/packages/frontend/styles/SoundBoard.module.scss
+++ b/packages/frontend/styles/SoundBoard.module.scss
@@ -1,5 +1,7 @@
 @import '../styles/variables';
 
+$progress-bar-height: 10px;
+
 .container {
   background: #2c2c2c;
   padding: 2em 2.5em;
@@ -22,38 +24,42 @@
 
 .card {
   background: $orange;
-  aspect-ratio: 5;
+  aspect-ratio: 4.5;
   border-radius: 10px;
   overflow: hidden;
-  display: grid;
-  grid-template-columns: 2em auto;
-  grid-template-rows: calc(100% - 8px) 8px;
-  align-content: center;
 
-  .title {
+  & > div {
+    position: relative;
+    width: 100%;
+    height: 100%;
     display: grid;
+    grid-template-columns: 2em auto;
     align-content: center;
-    padding: 0.5em;
-  }
 
-  .playButton {
-    display: grid;
-    align-items: center;
-    align-content: center;
-    padding-left: 0.5em;
-
-    img {
-      width: 1em;
+    .title {
+      display: grid;
+      align-content: center;
+      padding: 0.5em;
     }
-  }
 
-  .progressBar {
-    background: $white;
-    border-radius: 5px;
-    height: 10px;
-    width: 0;
-    grid-column: 1 / 3;
-    grid-row: 2;
+    .play_button {
+      display: grid;
+      align-items: center;
+      align-content: center;
+      padding-left: 0.5em;
+
+      img {
+        width: 1em;
+      }
+    }
+
+    .progress_bar {
+      position: absolute;
+      background: $white;
+      height: $progress-bar-height;
+      width: 0;
+      bottom: 0;
+    }
   }
 }
 
