--- a/packages/frontend/components/SoundBoard/SoundBoard.module.scss
+++ b/packages/frontend/components/SoundBoard/SoundBoard.module.scss
@@ -1,4 +1,4 @@
-@import '../styles/variables';
+@import 'styles/variables';
 
 $progress-bar-height: 10px;
 
@@ -6,7 +6,7 @@ $progress-bar-height: 10px;
   background: #2c2c2c;
   padding: 2em 2.5em;
   margin: 2em;
-  border-radius: 1.5em;
+  border-radius: 10px;
   font-size: 1.7rem;
   color: $white;
 
@@ -27,6 +27,7 @@ $progress-bar-height: 10px;
   aspect-ratio: 4.5;
   border-radius: 10px;
   overflow: hidden;
+  cursor: pointer;
 
   & > div {
     position: relative;
@@ -39,14 +40,14 @@ $progress-bar-height: 10px;
     .title {
       display: grid;
       align-content: center;
-      padding: 0.5em;
+      padding-left: 0.5em;
     }
 
     .play_button {
       display: grid;
       align-items: center;
       align-content: center;
-      padding-left: 0.5em;
+      padding-left: 1em;
 
       img {
         width: 1em;
