--- a/packages/frontend/styles/videoBoard.module.scss
+++ b/packages/frontend/styles/videoBoard.module.scss
@@ -1,9 +1,7 @@
-$card: #FE7D3E;
-$bg: #202020;
-$text: #ffffff;
+@import '../styles/variables';
 
 .text{
-    color: $text;
+    color: $white;
 }
 
 .listContainer{
@@ -11,7 +9,7 @@ $text: #ffffff;
     grid-template-columns: auto auto;
     grid-column-gap: 30px;
     grid-row-gap: 30px;
-    background-color: $bg;
+    background-color: $grey;
     justify-content: center;
 }
 
@@ -21,7 +19,7 @@ $text: #ffffff;
 }
 
 .cardInfo{
-    color: $text;
+    color: $white;
     display: inline;
 }
 
@@ -32,5 +30,5 @@ $text: #ffffff;
 .player{
     width: 100%;
     height: 100%;
-    border: 10px solid $card;
+    border: 10px solid $orange;
 }
