Add tabs and check confirm

--- a/packages/frontend/styles/Form.module.scss
+++ b/packages/frontend/styles/Form.module.scss
@@ -9,15 +9,20 @@ $dark-grey: #373737;
   max-width: 700px;
   padding: 0 50px;
   margin: 0 auto;
+
+  color: $white;
+  font-size: $normal-font-size;
+}
+
+.form.hide {
+  display: none;
 }
 
 .tabs {
-  font-size: $normal-font-size;
-  color: $white;
-
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 5px 0.5em;
+  padding-top: 100px;
 
   label {
     grid-column: 1 / 4;
@@ -68,6 +73,71 @@ $dark-grey: #373737;
   input:focus {
     outline: none;
     box-shadow: 0 0 0 6px $orange;
+  }
+}
+
+.confirm {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 1em;
+  text-align: justify;
+
+  .check_container {
+    display: block;
+    position: relative;
+    padding-left: 1em;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    input {
+      position: absolute;
+      opacity: 0;
+      cursor: pointer;
+      height: 0;
+      width: 0;
+    }
+
+    span {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 1em;
+      width: 1em;
+      background-color: $grey;
+      border-radius: 0.3em;
+    }
+
+    input:checked ~ span {
+      background-color: $orange;
+    }
+    span:after {
+      content: '';
+      position: absolute;
+      display: none;
+    }
+
+    input:checked ~ span:after {
+      display: block;
+    }
+
+    span:after {
+      left: 0.3em;
+      top: 0.15em;
+      width: 0.25em;
+      height: 0.5em;
+      border: solid white;
+      border-width: 0 3px 3px 0;
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
+    }
+  }
+
+  .check_container:hover span {
+    background-color: $dark-grey;
   }
 }
 
