--- a/packages/frontend/components/SoundBoard/SoundBoard.module.scss
+++ b/packages/frontend/components/SoundBoard/SoundBoard.module.scss
@@ -6,7 +6,7 @@ $progress-bar-height: 10px;
   background: #2c2c2c;
   padding: 2em 2.5em;
   margin: 2em;
-  border-radius: 10px;
+  border-radius: 0.75rem;
   font-size: 1.7rem;
   color: $white;
 
@@ -24,8 +24,8 @@ $progress-bar-height: 10px;
 
 .card {
   background: $orange;
-  aspect-ratio: 4.5;
-  border-radius: 10px;
+  height: 6rem;
+  border-radius: 0.625rem;
   overflow: hidden;
   cursor: pointer;
 
