--- a/packages/frontend/styles/globals.scss
+++ b/packages/frontend/styles/globals.scss
@@ -11,7 +11,7 @@
 }
 html {
   background: $background;
-  cursor: url('../public/plug-type-asacoco.cur'), default;
+  cursor: url('/plug-type-asacoco.cur'), default;
 }
 body {
   margin: 0;
