Adjusting checkbox for cursor

--- a/packages/frontend/components/Forms/Form.module.scss
+++ b/packages/frontend/components/Forms/Form.module.scss
@@ -107,6 +107,7 @@ $error: red;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    margin-top: 0.25em;
 
     input {
       position: absolute;
