--- a/packages/frontend/components/Forms/Form.module.scss
+++ b/packages/frontend/components/Forms/Form.module.scss
@@ -58,18 +58,19 @@ $error: red;
     height: 2.3em;
   }
 
-  textarea {
-    resize: vertical;
-    height: 6em;
-  }
-
   input,
   textarea {
     width: calc(100% - 20px);
-    padding: 0 10px;
+    padding: 2px 20px;
     background: $grey;
     border: none;
     border-radius: 10px;
+  }
+
+  textarea {
+    resize: vertical;
+    height: 6em;
+    padding: 20px 20px;
   }
 
   input:-webkit-autofill,
