--- a/packages/frontend/components/Forms/Form.module.scss
+++ b/packages/frontend/components/Forms/Form.module.scss
@@ -84,7 +84,7 @@ $error: red;
   textarea:focus,
   input:focus {
     outline: none;
-    box-shadow: 0 0 0 6px $orange;
+    box-shadow: inset 0 0 0 4px $orange;
   }
 }
 
