--- a/packages/frontend/styles/MessageCard.module.scss
+++ b/packages/frontend/styles/MessageCard.module.scss
@@ -1,41 +1,56 @@
 @import "../styles/variables.scss";
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700;800&display=swap');
 
+.container{
+    
+    background: $black;
+    padding: 2em 2.5em;
+    border-radius: 1.5em;
+    overflow:hidden;
+}
 
 .card{
     background-color: $orange;
-    border-radius: 25px;
     aspect-ratio: auto;
+    border-radius: 25px;
     color: $white;
-    overflow: hidden;
     font-family: "Open Sans";
-
-
+    width: 788px;
+    padding: 10px;
+    position: relative;
+    overflow: visible;        
+    
     .title{
         text-align: left;
         margin-top: 36px;
-        margin-bottom: 25.5px;
         font-size: 30;
         margin-left: 49px;
         font-family: "Open Sans" ;
     
     }
+    
+    img{
+        float: right;
+        position: relative;
+        top: -100px;
+        left: 30px;    
+
+    }
 
     .message{
         font-size: 24;
         text-align: left;
-        margin-top: 25.5px;
-        margin-bottom: 6.5px;
+        margin-top: 20px;
         margin-left: 49px;
+        margin-right: 132px;
         font-family: "Open Sans" ;
     }
 
     .author{
-        margin-top: 6.5px;
-        text-align: right;
+        position: relative;
+        left: 640px;
         font-size: 30;
-        margin-bottom: 33px;
-        margin-right: 38px;
         font-family: "Open Sans" ;
+        font-weight: 800;
     }
 }
