Add hover text animation

--- a/packages/frontend/components/Navigation/Navigation.module.scss
+++ b/packages/frontend/components/Navigation/Navigation.module.scss
@@ -76,6 +76,7 @@
 
         img {
           height: 2.5rem;
+          transition: opacity 100ms ease-in;
         }
 
         .active {
@@ -83,6 +84,22 @@
           color: $white;
           border-radius: 100%;
         }
+
+        .icon_text{
+          position: absolute;
+          height: max-content;
+          width: max-content;
+          top: 0.5rem;
+          opacity: 0;
+          transition: opacity 100ms ease-in;
+        }
+      }
+      .icon:hover img{
+        opacity: 0;
+      }
+
+      .icon:hover .icon_text{
+        opacity: 1;
       }
     }
   }
