--- a/packages/frontend/styles/videoBoard.module.scss
+++ b/packages/frontend/styles/videoBoard.module.scss
@@ -9,7 +9,7 @@
     grid-template-columns: auto auto;
     grid-column-gap: 30px;
     grid-row-gap: 30px;
-    background-color: $grey;
+    background-color: $background;
     justify-content: center;
 }
 
