moved components into own folder

--- a/packages/frontend/components/Video/videoBoard.module.scss
+++ b/packages/frontend/components/Video/videoBoard.module.scss
@@ -1,4 +1,4 @@
-@import '../styles/variables';
+@import '../../styles/variables';
 
 .text{
     color: $white;
@@ -28,6 +28,7 @@
 }
 
 .player{
+    
     width: 100%;
     height: 100%;
     border: 10px solid $orange;
