--- a/packages/frontend/components/Video/videoBoard.module.scss
+++ b/packages/frontend/components/Video/videoBoard.module.scss
@@ -31,11 +31,12 @@
 
 .playerWrapper{
     position: relative;
+    padding-top: 56.25%;
 }
 
 .player{
-    
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     border: 10px solid $orange;
 }
