--- a/packages/frontend/styles/variables.scss
+++ b/packages/frontend/styles/variables.scss
@@ -4,3 +4,6 @@ $orange: #fe7d3e;
 $dark-orange: #d36129;
 $white: #ffffff;
 $background: #202020;
+
+$breakpoint-tablet: 860px;
+$breakpoint-phone: 425px;
