--- a/packages/frontend/components/Navigation/Navigation.module.scss
+++ b/packages/frontend/components/Navigation/Navigation.module.scss
@@ -194,8 +194,12 @@
 
     .title {
       .box {
-        width:90vw;
+        width: 90vw;
         background-size: 90vw auto;
+
+        p {
+          margin-top: 1.5em;
+        }
       }
     }
   }
