--- a/packages/frontend/components/Navigation/Navigation.module.scss
+++ b/packages/frontend/components/Navigation/Navigation.module.scss
@@ -1,5 +1,4 @@
 @import 'styles/variables';
-@import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@1,300&display=swap');
 
 .navigation {
   background-image: url('/navigation/sakura-trees.png'); /* Got permission for it, https://www.pixiv.net/en/artworks/26394050 */
@@ -89,8 +88,9 @@
           position: absolute;
           height: max-content;
           width: max-content;
-          top: 0.5rem;
           opacity: 0;
+          top: 50%;
+          transform: translateY(-50%);
           transition: opacity 100ms ease-in;
         }
       }
@@ -112,6 +112,7 @@
     display: flex;
     margin-top: 20vh;
     margin-left: 10rem;
+    font-family: 'K2D';
 
     .box {
       background-image: url('/navigation/Title.svg');
@@ -180,14 +181,15 @@
         right: 1rem;
 
         .icon {
+          height: 10vw;
+          
           img {
             height: 10vw;
           }
-        }
-
-        .icon_text {
-          top: 5vh;
-          font-size: 0.7em;
+          
+		      .icon_text {
+            font-size: 0.7em;
+		      }
         }
       }
     }
