make the forms more responsive

--- a/packages/frontend/components/Forms/Form.module.scss
+++ b/packages/frontend/components/Forms/Form.module.scss
@@ -1,6 +1,9 @@
 @import 'styles/variables';
 
 $normal-font-size: 24px;
+$tablet-font-size: 18px;
+$phone-font-size: 12px;
+
 $grey: #3f3f3f;
 $dark-grey: #373737;
 $error: red;
@@ -8,11 +11,19 @@ $error: red;
 .form,
 .tabs {
   max-width: 700px;
-  padding: 0 50px;
+  padding: 0 2em;
   margin: 0 auto;
 
   color: $white;
   font-size: $normal-font-size;
+
+  @media only screen and (max-width: $breakpoint-tablet) {
+    font-size: $tablet-font-size;
+  }
+
+  @media only screen and (max-width: $breakpoint-phone) {
+    font-size: $phone-font-size;
+  }
 }
 
 .form.hide {
@@ -46,8 +57,16 @@ $error: red;
   label,
   input,
   textarea {
-    font-size: $normal-font-size;
     color: $white;
+    font-size: $normal-font-size;
+
+    @media only screen and (max-width: $breakpoint-tablet) {
+      font-size: $tablet-font-size;
+    }
+
+    @media only screen and (max-width: $breakpoint-phone) {
+      font-size: $phone-font-size;
+    }
   }
   label {
     display: block;
@@ -60,11 +79,11 @@ $error: red;
 
   input,
   textarea {
-    width: calc(100% - 20px);
+    width: calc(100% - 40px);
     padding: 2px 20px;
     background: $grey;
     border: none;
-    border-radius: 10px;
+    border-radius: 0.4em;
   }
 
   textarea {
@@ -103,7 +122,7 @@ $error: red;
     display: block;
     position: relative;
     padding-left: 1em;
-    font-size: 22px;
+    font-size: 1.2em;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -170,11 +189,19 @@ $error: red;
   color: $white;
   background: $dark-grey;
   height: 2.3em;
-  border-radius: 10px;
+  border-radius: 0.4em;
 
   font-size: $normal-font-size;
   font-style: normal;
   font-weight: bold;
+
+  @media only screen and (max-width: $breakpoint-tablet) {
+    font-size: $tablet-font-size;
+  }
+
+  @media only screen and (max-width: $breakpoint-phone) {
+    font-size: $phone-font-size;
+  }
 }
 
 .button:hover {
