Add style for navigation in form pages

--- a/packages/frontend/components/Navigation/Navigation.module.scss
+++ b/packages/frontend/components/Navigation/Navigation.module.scss
@@ -85,7 +85,7 @@
           border-radius: 100%;
         }
 
-        .icon_text{
+        .icon_text {
           position: absolute;
           height: max-content;
           width: max-content;
@@ -94,13 +94,14 @@
           transition: opacity 100ms ease-in;
         }
       }
-      
-      .icon:hover{
+
+      .icon:hover {
         img {
           opacity: 0;
         }
 
-        .active, .icon_text{
+        .active,
+        .icon_text {
           opacity: 1;
         }
       }
@@ -119,7 +120,7 @@
       width: 80vw;
       height: 40rem;
       background-size: 34rem auto;
-  
+
       p {
         position: static;
         margin-top: 1.2em;
@@ -149,7 +150,7 @@
       .box {
         height: auto;
         background-size: 80vw auto;
-  
+
         p {
           font-size: 6vw;
         }
@@ -167,7 +168,6 @@
     }
 
     .navigators {
-
       .navbar {
         grid-area: navbar;
         width: 100vw;
@@ -200,6 +200,45 @@
         p {
           margin-top: 1.5em;
         }
+      }
+    }
+  }
+}
+
+.navigation.form {
+  background: none;
+  box-shadow: none;
+  height: auto;
+  margin-bottom: 0;
+
+  .title {
+    margin-top: 0;
+    margin-left: calc(50vw - 20rem);
+
+    .box {
+      width: 34rem;
+      height: 15rem;
+    }
+  }
+
+  grid-template-rows: auto auto;
+
+  @media only screen and (max-width: $breakpoint-tablet) {
+    .title {
+      margin-top: 14vh;
+      margin-left: 0;
+      .box {
+        width: 80vw;
+        height: 30vw;
+      }
+    }
+  }
+
+  @media only screen and (max-width: $breakpoint-phone) {
+    .title {
+      .box {
+        width: 90vw;
+        height: 7rem;
       }
     }
   }
