--- a/packages/frontend/components/Video/videoBoard.module.scss
+++ b/packages/frontend/components/Video/videoBoard.module.scss
@@ -50,6 +50,6 @@
     top: 0;
     left: 0;
     border: 10px solid $orange;
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
 }
