Reposition server message error

--- a/packages/frontend/components/Forms/Form.module.scss
+++ b/packages/frontend/components/Forms/Form.module.scss
@@ -218,3 +218,10 @@ $error: red;
 .button_submit:hover {
   background: $dark-orange;
 }
+
+.submit {
+  margin-top: 1em;
+  .error_msg {
+    text-align: right;
+  }
+}
