--- a/packages/frontend/components/MessageCards/MessageCard.module.scss
+++ b/packages/frontend/components/MessageCards/MessageCard.module.scss
@@ -7,14 +7,17 @@
   justify-content: center;
   padding: 100px;
   margin: 20px;
+  align-content: center;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(768px, 400px));
-  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, 500px);
+  grid-row-gap: 20px;
+  grid-column-gap: 30px;
   width: 100%;
   height: 100%;
+  align-content: center;
 }
 
 .card {
@@ -30,7 +33,7 @@
   .title {
     text-align: left;
     margin-top: 12px;
-    font-size: 30;
+    font-size: 20px;
     margin-left: 49px;
     font-family: 'Open Sans';
   }
@@ -38,23 +41,27 @@
   img {
     float: right;
     position: relative;
-    top: -120px;
-    left: 30px;
+    top: -60px;
+    left: 10px;
+    height: 105px;
   }
 
   .message {
     font-size: 24;
     text-align: left;
-    margin-top: 20px;
+    margin-top: 40px;
     margin-left: 49px;
-    margin-right: 132px;
+    margin-right: 60px;
     font-family: 'Open Sans';
     font-weight: 700;
   }
 
   .author {
     text-align: right;
-    font-size: 30;
+    margin-top: 10px;
+    margin-right: 20px;
+    margin-bottom: 14px;
+    font-size: 20px;
     font-family: 'Open Sans';
     font-weight: 800;
   }
