--- a/packages/frontend/components/Video/videoBoard.module.scss
+++ b/packages/frontend/components/Video/videoBoard.module.scss
@@ -45,11 +45,9 @@
     padding-top: 56.25%;
 }
 
-.player{
+#player{
     position: absolute;
     top: 0;
     left: 0;
     border: 10px solid $orange;
-    width: 100% !important;
-    height: 100% !important;
 }
