--- a/packages/frontend/components/ToTheTopButton/ToTheTopButton.module.scss
+++ b/packages/frontend/components/ToTheTopButton/ToTheTopButton.module.scss
@@ -3,31 +3,40 @@
 .container {
   display: grid;
   justify-content: center;
-}
 
-.button {
-  cursor: pointer;
-  display: grid;
-  grid-template-columns: auto auto;
-  align-items: center;
+  .button {
+    cursor: pointer;
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    z-index: 1;
+  
+    color: $white;
+    background: $gray;
+    height: 2.4em;
+    width: 8.4em;
+    border-radius: 10px;
+  
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+  
+    img {
+      width: 1em;
+      right: 0;
+      margin: auto;
+    }
 
-  color: $white;
-  background: #373737;
-  height: 2.4em;
-  width: 8.4em;
-  border-radius: 10px;
-
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 700;
-
-  img {
-    width: 1em;
-    right: 0;
-    margin: auto;
+    &:hover {
+      background: $dark-gray;
+    }
   }
 }
 
-.button:hover {
-  background: #2c2c2c;
+@media only screen and (max-width: $breakpoint-tablet) {
+  .container {
+    .button {
+      font-size: 6vw;
+    }
+  }
 }
