--- a/packages/frontend/styles/variables.scss
+++ b/packages/frontend/styles/variables.scss
@@ -3,6 +3,8 @@
 $orange: #fe7d3e;
 $dark-orange: #d36129;
 $white: #ffffff;
+$gray: #373737;
+$dark-gray: #2c2c2c;
 $background: #202020;
 
 $breakpoint-tablet: 860px;
