--- a/packages/frontend/components/Fanart/styles.module.scss
+++ b/packages/frontend/components/Fanart/styles.module.scss
@@ -33,6 +33,7 @@ $enlarged-background: rgba($background, 0.9);
     width: 100%;
     height: 100%;
     object-fit: contain;
+    cursor: pointer;
   }
 
   .enlarged {
