Fixed the font sizing issue.

--- a/packages/frontend/components/MessageCards/MessageCard.module.scss
+++ b/packages/frontend/components/MessageCards/MessageCard.module.scss
@@ -37,7 +37,7 @@
   }
 
   .message {
-    font-size: 24;
+    font-size: 16px;
     text-align: left;
     margin-top: 40px;
     margin-left: 49px;
